RESOLVED FIXED79331
Object.isSealed / Object.isFrozen don't work for native objects
https://bugs.webkit.org/show_bug.cgi?id=79331
Summary Object.isSealed / Object.isFrozen don't work for native objects
Gavin Barraclough
Reported 2012-02-22 22:25:37 PST
Need to inspect all properties, including static ones.
Attachments
Fix (16.58 KB, patch)
2012-02-22 22:29 PST, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2012-02-22 22:29:09 PST
Gavin Barraclough
Comment 2 2012-02-23 11:42:48 PST
Fixed in r108651
Note You need to log in before you can comment on or make changes to this bug.