Source/JavaScriptCore/runtime/ObjectConstructor.cpp
@@ -365,29 +365,30 @@ EncodedJSValue JSC_HOST_CALL objectConstructorSeal(ExecState* exec)
         return throwVMError(exec, createTypeError(exec, "Object.seal can only be called on Objects."));
     JSObject* object = asObject(obj);
 
-    if (isJSFinalObject(obj))
+    if (isJSFinalObject(object)) {
         object->seal(exec->globalData());
-    else {
-        // 2. For each named own property name P of O,
-        PropertyNameArray properties(exec);
-        object->methodTable()->getOwnPropertyNames(object, exec, properties, IncludeDontEnumProperties);
-        PropertyNameArray::const_iterator end = properties.end();
-        for (PropertyNameArray::const_iterator iter = properties.begin(); iter != end; ++iter) {
-            // a. Let desc be the result of calling the [[GetOwnProperty]] internal method of O with P.
-            PropertyDescriptor desc;
-            if (!object->methodTable()->getOwnPropertyDescriptor(object, exec, *iter, desc))
-                continue;
-            // b. If desc.[[Configurable]] is true, set desc.[[Configurable]] to false.
-            desc.setConfigurable(false);
-            // c. Call the [[DefineOwnProperty]] internal method of O with P, desc, and true as arguments.
-            object->methodTable()->defineOwnProperty(object, exec, *iter, desc, true);
-            if (exec->hadException())
-                return JSValue::encode(obj);
-        }
-
-        // 3. Set the [[Extensible]] internal property of O to false.
-        object->preventExtensions(exec->globalData());
+        return JSValue::encode(obj);
     }
+
+    // 2. For each named own property name P of O,
+    PropertyNameArray properties(exec);
+    object->methodTable()->getOwnPropertyNames(object, exec, properties, IncludeDontEnumProperties);
+    PropertyNameArray::const_iterator end = properties.end();
+    for (PropertyNameArray::const_iterator iter = properties.begin(); iter != end; ++iter) {
+        // a. Let desc be the result of calling the [[GetOwnProperty]] internal method of O with P.
+        PropertyDescriptor desc;
+        if (!object->methodTable()->getOwnPropertyDescriptor(object, exec, *iter, desc))
+            continue;
+        // b. If desc.[[Configurable]] is true, set desc.[[Configurable]] to false.
+        desc.setConfigurable(false);
+        // c. Call the [[DefineOwnProperty]] internal method of O with P, desc, and true as arguments.
+        object->methodTable()->defineOwnProperty(object, exec, *iter, desc, true);
+        if (exec->hadException())
+            return JSValue::encode(obj);
+    }
+
+    // 3. Set the [[Extensible]] internal property of O to false.
+    object->preventExtensions(exec->globalData());
 
     // 4. Return O.
     return JSValue::encode(obj);
@@ -401,33 +402,34 @@ EncodedJSValue JSC_HOST_CALL objectConstructorFreeze(ExecState* exec)
         return throwVMError(exec, createTypeError(exec, "Object.freeze can only be called on Objects."));
     JSObject* object = asObject(obj);
 
-    if (isJSFinalObject(obj))
+    if (isJSFinalObject(object)) {
         object->freeze(exec->globalData());
-    else {
-        // 2. For each named own property name P of O,
-        PropertyNameArray properties(exec);
-        object->methodTable()->getOwnPropertyNames(object, exec, properties, IncludeDontEnumProperties);
-        PropertyNameArray::const_iterator end = properties.end();
-        for (PropertyNameArray::const_iterator iter = properties.begin(); iter != end; ++iter) {
-            // a. Let desc be the result of calling the [[GetOwnProperty]] internal method of O with P.
-            PropertyDescriptor desc;
-            if (!object->methodTable()->getOwnPropertyDescriptor(object, exec, *iter, desc))
-                continue;
-            // b. If IsDataDescriptor(desc) is true, then
-            // i. If desc.[[Writable]] is true, set desc.[[Writable]] to false.
-            if (desc.isDataDescriptor())
-                desc.setWritable(false);
-            // c. If desc.[[Configurable]] is true, set desc.[[Configurable]] to false.
-            desc.setConfigurable(false);
-            // d. Call the [[DefineOwnProperty]] internal method of O with P, desc, and true as arguments.
-            object->methodTable()->defineOwnProperty(object, exec, *iter, desc, true);
-            if (exec->hadException())
-                return JSValue::encode(obj);
-        }
-
-        // 3. Set the [[Extensible]] internal property of O to false.
-        object->preventExtensions(exec->globalData());
+        return JSValue::encode(obj);
     }
+
+    // 2. For each named own property name P of O,
+    PropertyNameArray properties(exec);
+    object->methodTable()->getOwnPropertyNames(object, exec, properties, IncludeDontEnumProperties);
+    PropertyNameArray::const_iterator end = properties.end();
+    for (PropertyNameArray::const_iterator iter = properties.begin(); iter != end; ++iter) {
+        // a. Let desc be the result of calling the [[GetOwnProperty]] internal method of O with P.
+        PropertyDescriptor desc;
+        if (!object->methodTable()->getOwnPropertyDescriptor(object, exec, *iter, desc))
+            continue;
+        // b. If IsDataDescriptor(desc) is true, then
+        // i. If desc.[[Writable]] is true, set desc.[[Writable]] to false.
+        if (desc.isDataDescriptor())
+            desc.setWritable(false);
+        // c. If desc.[[Configurable]] is true, set desc.[[Configurable]] to false.
+        desc.setConfigurable(false);
+        // d. Call the [[DefineOwnProperty]] internal method of O with P, desc, and true as arguments.
+        object->methodTable()->defineOwnProperty(object, exec, *iter, desc, true);
+        if (exec->hadException())
+            return JSValue::encode(obj);
+    }
+
+    // 3. Set the [[Extensible]] internal property of O to false.
+    object->preventExtensions(exec->globalData());
 
     // 4. Return O.
     return JSValue::encode(obj);
@@ -444,18 +446,63 @@ EncodedJSValue JSC_HOST_CALL objectConstructorPreventExtensions(ExecState* exec)
 
 EncodedJSValue JSC_HOST_CALL objectConstructorIsSealed(ExecState* exec)
 {
+    // 1. If Type(O) is not Object throw a TypeError exception.
     JSValue obj = exec->argument(0);
     if (!obj.isObject())
         return throwVMError(exec, createTypeError(exec, "Object.isSealed can only be called on Objects."));
-    return JSValue::encode(jsBoolean(asObject(obj)->isSealed(exec->globalData())));
+    JSObject* object = asObject(obj);
+
+    if (isJSFinalObject(object))
+        return JSValue::encode(jsBoolean(object->isSealed(exec->globalData())));
+
+    // 2. For each named own property name P of O,
+    PropertyNameArray properties(exec);
+    object->methodTable()->getOwnPropertyNames(object, exec, properties, IncludeDontEnumProperties);
+    PropertyNameArray::const_iterator end = properties.end();
+    for (PropertyNameArray::const_iterator iter = properties.begin(); iter != end; ++iter) {
+        // a. Let desc be the result of calling the [[GetOwnProperty]] internal method of O with P.
+        PropertyDescriptor desc;
+        if (!object->methodTable()->getOwnPropertyDescriptor(object, exec, *iter, desc))
+            continue;
+        // b. If desc.[[Configurable]] is true, then return false.
+        if (desc.configurable())
+            return JSValue::encode(jsBoolean(false));
+    }
+
+    // 3. If the [[Extensible]] internal property of O is false, then return true.
+    // 4. Otherwise, return false.
+    return JSValue::encode(jsBoolean(!object->isExtensible()));
 }
 
 EncodedJSValue JSC_HOST_CALL objectConstructorIsFrozen(ExecState* exec)
 {
+    // 1. If Type(O) is not Object throw a TypeError exception.
     JSValue obj = exec->argument(0);
     if (!obj.isObject())
         return throwVMError(exec, createTypeError(exec, "Object.isFrozen can only be called on Objects."));
-    return JSValue::encode(jsBoolean(asObject(obj)->isFrozen(exec->globalData())));
+    JSObject* object = asObject(obj);
+
+    if (isJSFinalObject(object))
+        return JSValue::encode(jsBoolean(object->isFrozen(exec->globalData())));
+
+    // 2. For each named own property name P of O,
+    PropertyNameArray properties(exec);
+    object->methodTable()->getOwnPropertyNames(object, exec, properties, IncludeDontEnumProperties);
+    PropertyNameArray::const_iterator end = properties.end();
+    for (PropertyNameArray::const_iterator iter = properties.begin(); iter != end; ++iter) {
+        // a. Let desc be the result of calling the [[GetOwnProperty]] internal method of O with P.
+        PropertyDescriptor desc;
+        if (!object->methodTable()->getOwnPropertyDescriptor(object, exec, *iter, desc))
+            continue;
+        // b. If IsDataDescriptor(desc) is true then
+        // i. If desc.[[Writable]] is true, return false. c. If desc.[[Configurable]] is true, then return false.
+        if ((desc.isDataDescriptor() && desc.writable()) || desc.configurable())
+            return JSValue::encode(jsBoolean(false));
+    }
+
+    // 3. If the [[Extensible]] internal property of O is false, then return true.
+    // 4. Otherwise, return false.
+    return JSValue::encode(jsBoolean(!object->isExtensible()));
 }
 
 EncodedJSValue JSC_HOST_CALL objectConstructorIsExtensible(ExecState* exec)
